alignment issue and pages(contact us,product details,services details)

--- a/src/app/pages/achievements/achievements.component.scss
+++ b/src/app/pages/achievements/achievements.component.scss
@@ -33,6 +33,16 @@
       left: 0;
       position: absolute;
       transition: all 0.5s;
+      z-index: 1;
+    }
+    &:after {
+      content: '';
+      border: 5px solid #9b9b9b;
+      width: 100px;
+      height: 200px;
+      bottom: 0;
+      right: 0;
+      position: absolute;
     }
     &:hover {
       &:before {
@@ -40,22 +50,5 @@
         height: 100%;
       }
     }
-    // &:before {
-    //     border-top:5px solid #2489ff;
-    //     content: "";
-    //     position: absolute;
-    //     top: -5px;
-    //     left: -5px;
-    //     width: 100px;
-    // }
-    // &:after {
-    //     border-left:5px solid #2489ff;
-    //     content: "";
-    //     position: absolute;
-    //     top: -5px;
-    //     left: -5px;
-    //     width: 5px;
-    //     height:200px;
-    // }
   }
 }
